public/styles/20221205-global.css
@import "/styles/reset.css";

:root {
  --white: hsl(0deg, 0%, 99%);
  --black: hsl(0deg, 0%, 3%);
  --alt-text-opacity: 0.7;
  --screen-sm: 370px;
  --screen-md: 768px;
  --screen-lg: 1024px;
}

html {
  font-size: 16px;
  --serif: "Noto Serif", "Palatino", "Book Antiqua", "Big Caslon",
    "Goudy Old Style", serif;
  --sans-serif: "Gangster Grotesk", "Helvetica Neue", Helvetica, Arial,
    sans-serif;
  --color-bg: var(--white);
  --color-text: var(--black);
}

body {
  font-family: var(--serif);
  font-size: 1rem;
  line-height: 1.75rem;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0rem 1rem;
  display: flex;
  flex-direction: column;
}

main {
  padding-bottom: 2rem;
  flex: 1 0 auto;
}

article {
  max-width: 600px;
}

.intro {
  max-width: 600px;
  margin-bottom: 4rem;
}

/* Images */

img {
  border-radius: 0.25rem;
}

figcaption {
  margin-top: 0.5rem;
  font-style: italic;
  /* below similar to .label */
  font-size: 0.8rem;
  line-height: 1.3rem;
}

/* Nav */

nav {
  z-index: 1;
  position: relative;
}

nav ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  column-gap: 2rem;
  margin-bottom: 5rem;
}

/* Typography */

h1,
h2,
h3 {
  font-family: var(--sans-serif);
  font-weight: bold;
  text-transform: capitalize;
}

h1 {
  font-size: 2.827rem;
  line-height: 2.9rem;
}

h2 {
  font-size: 1.999rem;
  line-height: 2.3rem;
  margin: 3rem 0 1rem 0;
}

h3 {
  font-size: 1.414rem;
  line-height: 1.8rem;
  margin: 2rem 0 1rem 0;
}

p,
ul,
ol {
  margin: 1rem 0;
}

li {
  margin: 0.4rem 0;
}

.emphasis {
  font-family: var(--sans-serif);
  font-weight: normal;
  font-size: 1.414rem;
  line-height: 2rem;
}

.label {
  font-family: var(--sans-serif);
  text-transform: uppercase;
  font-weight: bold;
  font-size: small;
  line-height: 1.3rem;
  letter-spacing: 0.1em;
  opacity: var(--alt-text-opacity);
}

.subtle {
  opacity: var(--alt-text-opacity);
}

blockquote {
  border-left: solid 1px;
  padding-left: 1.5rem;
  margin: 2rem 0 2rem 2rem;
  opacity: var(--alt-text-opacity);
}

pre {
  opacity: var(--alt-text-opacity);
  overflow: auto;
}

code,
kbd {
  font-size: smaller;
}

hr {
  border: none;
  margin: 3rem 0;
  display: flex;
  justify-content: center;
  font-family: var(--sans-serif);
  font-size: 1.5rem;
}

hr::before {
  content: "*\00a0*\00a0*";
}

/* Lists */

.nobullet,
.nobullet > li {
  padding: 0;
  list-style: none;
}

/* Details */

details summary {
  cursor: pointer;
}

/* Completed task */

.completed {
  text-decoration: line-through;
  opacity: var(--alt-text-opacity);
}
.completed::after {
  content: "\00A0\2714";
}

/* Hyperlinks */

.media-card button,
a {
  color: var(--color-text);
  text-underline-position: under;
}

.media-card button:hover,
a:hover {
  animation: color-change 5s infinite;
}

.media-card button:focus,
a:focus {
  animation: color-change 5s infinite;
  text-decoration: none;
  outline-offset: 0.1em;
  outline: 0.1em solid;
}

@keyframes color-change {
  5% {
    color: hsl(0, 100%, 30%);
  }
  15% {
    color: hsl(41, 100%, 33%);
  }
  30% {
    color: hsl(140, 100%, 27%);
  }
  50% {
    color: hsl(230, 100%, 50%);
  }
  70% {
    color: hsl(261, 100%, 55%);
  }
  90% {
    color: hsl(320, 100%, 31%);
  }
}

/* External links */

a[href*="//"]:not([href*="clarale.com"], #webring > a)::after
{
  content: url("/external-link.svg");
  display: inline-block;
  width: 1.2rem;
  transform: translate(0.4rem, -10%);
}

/* Footnotes */

.footnotes {
  border-top: solid 1px;
  margin-top: 7rem;
  font-family: var(--sans-serif);
  font-size: small;
  line-height: 1.2rem;
  opacity: var(--alt-text-opacity);
}

.footnotes ol {
  padding: 0 0 0 1rem;
}

a[id*="user-content-fnref"] {
  opacity: var(--alt-text-opacity);
  padding: 0 2px 0 3px;
}

/* List of generated posts */

#blog-list .post-row {
  display: flex;
  align-items: baseline;
  gap: 1rem;
}

#blog-list .post-row > .label {
  min-width: 3rem;
}

#blog-list .post-row > span {
  display: flex;
  flex-direction: column;
}

.post-row > span .subtle {
  /* font styles smaller than body */
  margin-top: 0.25rem;
  font-size: smaller;
  line-height: 1.3rem;
}

#recipe-list {
  columns: 1;
}

#recipe-list .post-row > .label {
  margin-left: 1em;
}

#bookmarks-list > li > span > span {
  /* selects the domain name */
  font-size: smaller;
  opacity: var(--alt-text-opacity);
}

/* Posts only */

.post-header {
  max-width: 1024px;
  margin-bottom: 3rem;
}

.post-header h1 {
  margin: 0;
}

/* Accessibility */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.skip-to-content {
  z-index: 2;
  position: absolute;
  transform: translateY(-280%);
  transition: transform 0.3s;
  background-color: var(--color-bg);
  padding: 0 0.5em;
}

.skip-to-content:focus {
  transform: translateY(20%);
}

/* Completely hide */

.hide {
  display: none;
}

/* Image composition (e.g. portfolio page) */

.image-comp {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
}

/* Homepage */

#webring {
  text-align: center;
  font-size: 0.8rem;
  font-family: var(--sans-serif);
}

#webring a {
  text-decoration: none;
  font-size: 1rem;
}

#webring span {
  display: none;
}

#home-intro {
  padding: 1rem;
  display: flex;
  justify-content: center;
  height: 100%;
}

#home-intro div {
  display: flex;
  gap: 2rem;
  align-items: center;
}

#home-intro svg {
  display: none;
  fill: currentColor;
  flex-shrink: 0;
  transition: transform 0.5s ease;
}

#home-intro svg:hover {
  display: block;
  animation: color-change 5s infinite;
  transform: scale(1.15);
}

#home-intro p {
  max-width: 600px;
}

/* Footer */

footer {
  display: flex;
  justify-content: space-between;
  flex-direction: row-reverse;
  align-items: center;
  flex-shrink: 0;
  padding: 1rem 0;
  font-size: 0.8rem;
  opacity: var(--alt-text-opacity);
}

footer ul {
  display: flex;
  gap: 1rem;
  padding: 0;
  margin: 0;
}

/* Dark mode */

@media (prefers-color-scheme: dark) {
  html {
    --color-bg: hsl(0deg, 0%, 2%);
    --color-text: hsl(0deg, 0%, 100%);
    --color-text-alt: hsl(360deg, 0%, 0%);
  }

  @keyframes color-change {
    5% {
      color: hsl(0, 78%, 65%);
    }
    15% {
      color: hsl(44, 100%, 71%);
    }
    30% {
      color: hsl(140, 55%, 54%);
    }
    50% {
      color: hsl(194, 100%, 59%);
    }
    70% {
      color: hsl(273, 100%, 70%);
    }
    90% {
      color: hsl(320, 74%, 70%);
    }
  }
}

/* Bigger than mobile */

@media only screen and (min-width: 370px) {
  html {
    font-size: 18px;
  }
  .emphasis {
    font-size: 1.999rem;
    line-height: 2.5rem;
  }
  #webring span {
    display: inline;
  }
}
@media only screen and (min-width: 768px) {
  body {
    padding: 2rem 4rem 2rem 4rem;
  }
  h1 {
    font-size: 3.998rem;
    line-height: 4.2rem;
  }
  details > *:not(summary) {
    margin-left: 2rem;
  }
  #recipe-list {
    columns: 2;
  }
  #home-intro svg {
    display: block;
  }
}

@media only screen and (min-width: 1024px) {
  /* Sidenotes */

  .sidenote {
    position: absolute;
    left: 750px; /* max-width of article being 600px */
    padding-right: 2rem;
    max-width: 300px;
  }

  .sidenote > * {
    margin: 0;
  }

  .footnotes {
    border: none;
  }

  #home-intro .h-card {
    gap: 4rem;
  }

  /* List of generated blog posts */
  #blog-list .post-row > span {
    flex-direction: row;
    column-gap: 1rem;
  }

  .post-row > span .subtle {
    /* font styles similar to body */
    margin-top: 0;
    font-size: 1rem;
    line-height: 1.75rem;
  }

  #recipe-list {
    columns: 3;
  }
}

